# HellbenderSamples

./: .gitmodules  CMakeLists.txt  ChangeSubmoduleBranch.bat  CommitHBESubmodule.bat
.github/workflows/: cmake-multi-platform.yml
Samples/Cube/: CubeScene.h  main.cpp
Samples/Instancing/: InstancingScene.h  main.cpp
Samples/Menu/: CMakeLists.txt  MenuScene.cpp  MenuScene.h  main.cpp
Samples/Model/: main.cpp
Samples/MultiThreadedSystem/: ParallelSystemScene.h  RotatorSystem.h
Samples/ParallelSystem/: CMakeLists.txt  ParallelSystemScene.h  QuadRendererSystem.cpp  QuadRendererSystem.h  RotatorSystem.cpp  RotatorSystem.h  main.cpp
Samples/ParallelSystem/res/shaders/: Colored.frag  Colored.vert
Samples/Pong/: FPSCounter.h  PongGame.cpp  PongGame.h  PongGameScene.cpp  PongGameScene.h  PongUIScene.cpp  PongUIScene.h  main.cpp
Samples/Pong/Systems/: BallSystem.cpp  BallSystem.h  PaddleSystem.cpp  PaddleSystem.h
Samples/RasterizationOrdered/: OrderedRenderingScene.h  main.cpp
Samples/Raytracer/: Denoiser.cpp  Denoiser.h  Raytracer.cpp  Raytracer.h  RaytracingScene.cpp  RaytracingScene.h  main.cpp
Samples/Raytracer/res/shaders/denoising/: blur.glsl  horizontal_blur.comp  temporal_accumulation.comp  vertical_blur.comp
Samples/Raytracer/res/shaders/raytracing/: common.glsl  mesh.glsl
Samples/Raytracer/res/shaders/raytracing/anyHit/: alpha_clipping_anyhit.glsl
Samples/Raytracer/res/shaders/raytracing/closestHit/: primary_closest_hit_mesh.glsl
Samples/Text/: TextScene.h  main.cpp
Samples/Triangle/: CMakeLists.txt  TriangleScene.h  main.cpp
